# drake

./: .coverage_compatibility.json  .env.example  .flake8  .gitignore  AGENT_INSTRUCTIONS.md  CLI_AUDIT_REPORT.md  CLI_GAP_ANALYSIS.md  COMPATIBILITY_COVERAGE_REPORT.md  CONTEXT.md  README.md  SUBMISSION_AUDIT_REPORT.md  SUBMISSION_READINESS_REPORT.md  docker-compose.yml  openapi.json  problem_statement.md  pyproject.toml  requirements.txt  scratch_audit.py  scratch_tree.txt  test_all.sh  trigger_dag.py  verify_rollback.py  verify_runtime.py
ai_cluster/: README.md  __init__.py  main.py
ai_cluster/config/: __init__.py  settings.py
ai_cluster/models/: __init__.py  contract_a.py
ai_cluster/output/: contract_a_sample.json  workflow_mapping.json  workflow_mapping_sample.json
ai_cluster/prompts/: __init__.py  workflow_prompt.py
ai_cluster/schemas/: __init__.py  workflow.py
ai_cluster/services/: __init__.py  clustering_service.py  ollama_service.py  repair_service.py  validation_service.py
ai_cluster/tests/: __init__.py  test_clustering_service.py  test_file_handler.py  test_mini_openapi_fixture_input.py  test_prompt_generation.py  test_repair_service.py  test_validation_service.py
ai_cluster/utils/: file_handler.py  logger.py
data/: governance.db  openapi_sample.json
data/backup_ai_cluster/: __init__.py  main.py
data/output/: contract_a.json  mcp_proxy.db  workflow_mapping.json
docs/: CLI_REFERENCE.md
frontend/: README.md  components.json  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
scratch/: community_dump.txt  validate_graph.py
scripts/: benchmark_pipeline.py  benchmark_pipeline_mocked.py  demo_ai_agent.py  extract_sample.py  interactive_agent.py  refine_workflow_names.py  run_production.py  verify_mcp_end_to_end.py
src/cli/: context.py  (+6 more)
tests/: conftest.py  test_clustering_quality.py  test_governance_api.py  test_microservice.py  test_mock_api.py  test_parser.py  test_security_hardening.py  test_server.py
(+143 files in other folders)
