[project]
name = "dell-mcp"
version = "0.1.0"
description = "Dell Enterprise MCP Workflow Proxy"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "instructor>=1.15.3",
    "ollama>=0.6.2",
    "openapi-core>=0.23.1",
    "pydantic>=2.13.4",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "networkx>=3.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
